<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Cleaner</string>
    <string name="search">Search</string>
    <string name="recordings">Recordings</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="action_debug">调试</string>
    <string name="debug_title">数据库调试</string>
    <string name="debug_record_count">数据库记录数: %d</string>
    <string name="debug_id">ID: %d</string>
    <string name="debug_filename">文件名: %s</string>
    <string name="debug_filepath">路径: %s</string>
    <string name="debug_filesize">大小: %s</string>
    <string name="debug_modified">修改时间: %s</string>
    <string name="debug_filetype">文件类型: %s</string>
    <string name="debug_is_call">是否通话录音: %b</string>
    <string name="debug_phone_number">电话号码: %s</string>
    <string name="debug_call_duration">通话时长: %s</string>
    <string name="action_refresh">刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">加载中...</string>
    <string name="app_name_debug">Android Cleaner Debug</string>
    
    <!-- 底部导航栏标题 -->
    <string name="title_overview">概览</string>
    <string name="title_recordings">录音</string>
    <string name="title_calls">通话</string>
    <string name="title_contacts">联系人</string>
    
    <!-- 导航栏文本 -->
    <string name="nav_overview">概览</string>
    <string name="nav_recordings">录音</string>
    <string name="nav_calls">通话</string>
    <string name="nav_contacts">联系人</string>
    
    <!-- CoordinatorLayout behavior -->
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    
    <!-- 通用 -->
    <string name="more_options">更多选项</string>
    <string name="play_pause">播放/暂停</string>
    <string name="stop">停止</string>
    <string name="playback_progress">播放进度</string>
    <string name="close">关闭</string>
    
    <!-- 录音相关 -->
    <string name="recording_duration">%1$d分%2$d秒</string>
    <string name="recording_date">%1$s</string>
    <string name="recording_size">%1$s</string>
    
    <!-- 新增字符串资源 -->
    <string name="no_calls_found">暂无通话记录</string>
    <string name="filter_calls">筛选通话记录</string>
    
    <!-- 标题栏标题 -->
    <string name="title_bar_overview">录音空间清理</string>
    <string name="title_bar_recordings">录音文件</string>
    <string name="title_bar_calls">通话录音</string>
    <string name="title_bar_contacts">联系人信息</string>
    
    <!-- 过滤菜单 -->
    <string name="filter">过滤</string>
    <string name="filter_all">全部录音</string>
    <string name="filter_deleted">已删除通话</string>
    <string name="filter_orphaned">孤立录音</string>
    <string name="filter_time">时间</string>
    <string name="time_all">全部时间</string>
    <string name="time_today">今天</string>
    <string name="time_week">最近7天</string>
    <string name="time_month">最近30天</string>
    <string name="time_quarter">最近90天</string>

    <string name="filter_duration">时长</string>
    <string name="duration_1min">1分钟以内</string>
    <string name="duration_5min">5分钟以内</string>
    <string name="duration_30min">30分钟以内</string>
    <string name="duration_2hour">2个小时以内</string>
    <string name="duration_longer">更长</string>

    <string name="filter_sort">排序</string>
    <string name="sort_time_desc">时间降序</string>
    <string name="sort_time_asc">时间升序</string>
    <string name="sort_size_desc">大小降序</string>
    <string name="sort_size_asc">大小升序</string>

    <!-- 选择模式的操作菜单 -->
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="share">分享</string>
    <string name="convert_to_text">转文字</string>
    <string name="rename">重命名</string>
</resources>