<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_options"
        app:showAsAction="always">
        
        <menu>
            <!-- 时间过滤子菜单 -->
            <item
                android:id="@+id/submenu_time"
                android:title="@string/filter_time">
                <menu>
                    <item
                        android:id="@+id/time_all"
                        android:title="@string/time_all" />
                    <item
                        android:id="@+id/time_today"
                        android:title="@string/time_today" />
                    <item
                        android:id="@+id/time_week"
                        android:title="@string/time_week" />
                    <item
                        android:id="@+id/time_month"
                        android:title="@string/time_month" />
                    <item
                        android:id="@+id/time_quarter"
                        android:title="@string/time_quarter" />
                </menu>
            </item>

            <!-- 时长过滤子菜单 -->
            <item
                android:id="@+id/submenu_duration"
                android:title="@string/filter_duration">
                <menu>
                    <item
                        android:id="@+id/duration_all"
                        android:title="@string/time_all" />
                    <item
                        android:id="@+id/duration_1min"
                        android:title="@string/duration_1min" />
                    <item
                        android:id="@+id/duration_5min"
                        android:title="@string/duration_5min" />
                    <item
                        android:id="@+id/duration_30min"
                        android:title="@string/duration_30min" />
                    <item
                        android:id="@+id/duration_2hour"
                        android:title="@string/duration_2hour" />
                    <item
                        android:id="@+id/duration_longer"
                        android:title="@string/duration_longer" />
                </menu>
            </item>

            <!-- 排序子菜单 -->
            <item
                android:id="@+id/submenu_sort"
                android:title="@string/filter_sort">
                <menu>
                    <item
                        android:id="@+id/sort_time_desc"
                        android:title="@string/sort_time_desc" />
                    <item
                        android:id="@+id/sort_time_asc"
                        android:title="@string/sort_time_asc" />
                    <item
                        android:id="@+id/sort_size_desc"
                        android:title="@string/sort_size_desc" />
                    <item
                        android:id="@+id/sort_size_asc"
                        android:title="@string/sort_size_asc" />
                </menu>
            </item>
        </menu>
    </item>
</menu> 