<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_overview">

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.blackharry.androidcleaner.overview.OverviewFragment"
        android:label="@string/title_overview" />

    <fragment
        android:id="@+id/nav_recordings"
        android:name="com.blackharry.androidcleaner.recordings.ui.RecordingsFragment"
        android:label="@string/title_recordings" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.blackharry.androidcleaner.contacts.ui.ContactsFragment"
        android:label="@string/title_contacts" />

</navigation> 